2017-06-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Minor.

	* src/ftgrid.c (grid_status_draw_outline): Move the stroker
	initialization from here...
	(main): ... to here.

2017-06-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Clean up charmap handling.

	* src/ftcommon.h (FT_ENCODING_ORDER): Introduce this special encoding
	for glyph order because `FT_ENCODING_NONE' has other meanings.
	* src/ftcommon.c (FTDemo_Install_Font): Fall back to
	`FT_ENCODING_ORDER' if encoding is not recognized.
	(FTDemo_Draw_Header): Updated.

	* src/ftview.c (status): Remove redundant `encoding' field and update
	all references.
	(FT_ENCODING_OTHER): Removed in favor of `FT_ENCODING_NONE'.

2017-06-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid, ftstring, ftview] Further top header consolidation.

	* src/ftview.c (event_encoding_change): Update `handle'.
	(write_header): Move instance, encoding, and the first glyph code
	reporting from here...
	* src/ftgrid.c (write_header): ... and from here...
	* src/ftcommon.c (FTDemo_Draw_Header): ... to here.
	* src/ftcommon.h (FTDemo_Draw_Header): Update prototype.
	* src/ftstring.c (write_header): Updated.

2017-05-29  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid, ftstring, ftview] Migrate gamma to `FTDemo_Display'.

	* src/ftcommon.h (FTDemo_Display): Add new field `gamma'.
	* src/ftcommon.c (FTDemo_Display_New): Initialize it.
	(FTDemo_Draw_Header): Updated.

	* src/ftgrid.c (GridStatusRec): Remove field `gamma'.
	(event_gamma_change): Updated.

	* src/ftstring.c (status): Remove field `gamma'.
	(event_gamma_change): Updated.

	* src/ftgrid.c (status): Remove field `gamma'.
	(event_gamma_change): Updated.

2017-05-28  Werner Lemberg  <wl@gnu.org>

	* src/ftbench.c (BENCH_TIME): Use `double' literal.

2017-05-27  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Split sources; change face index type to `long'.

	* src/ftinspect.cpp, src/ftinspect.h: Split into...